styling main elements

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,13 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: Karla, 'Markazi Text';
 }
+
+#root {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+
+
