--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,130 @@
     transform: rotate(360deg);
   }
 }
+
+
+nav {
+  min-width: 60vw;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  display: block;
+}
+
+nav li {
+  display: flex;
+  float: left;
+  vertical-align: middle;
+  padding: 1rem;
+  width: 7rem;
+}
+
+header {
+  min-width: 30vw;
+  padding-left: 5vw;
+  align-items: center;
+}
+
+header img {
+  padding-left: 12vw;
+  padding-right: 12vw;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  width: 6vw;
+  max-width: 100%;
+  height: auto;
+  align-self: center;
+  align-items: center;
+}
+
+footer, main {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  width: 90vw;
+}
+
+footer {
+  padding: 5vw;
+}
+
+footer {
+  background: #F4CE14;
+}
+footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+footer img {
+  display: block;
+  margin: 10%;
+}
+
+h1, h2 {
+  font-family: 'Markazi Text'
+}
+
+#Hero, #Testimonials, #Highlights, #About {
+  min-height: 80vh;
+  min-width: 90vw;
+  padding-left: 5vw;
+  padding-right: 5vw;
+}
+
+#Hero {
+  background-color: #495E57;
+  color: white;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+#About {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+#Highlights {
+  background-color: #EDEFEE;
+}
+
+#Testimonials {
+  background-color: #FBDABB;
+}
+
+#Hero img {
+  margin-top: 20%;
+  margin-bottom: 20%;
+  height: 60%;
+  width: auto;
+  border-radius: 10%;
+}
+
+#About div {
+  margin: 20%;
+}
+
+#About img {
+  margin-top: 20%;
+  margin-bottom: 20%;
+  height: 60vh;
+  width: auto;
+  border-radius: 10%;
+}
+
+#Hero div {
+  margin: 20%;
+}
+
+button {
+  background-color: #F4CE14; /* Green */
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
