--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,8 @@
 
 nav {
   min-width: 60vw;
-  padding-top: 1vh;
-  padding-bottom: 1vh;
+  padding-top: 5%;
+  padding-bottom: 5%;
   display: block;
 }
 
@@ -149,7 +149,7 @@ h1, h2 {
   margin: 20%;
 }
 
-button {
+main .nav-item {
   background-color: #F4CE14; /* Green */
   border: none;
   color: black;
@@ -160,6 +160,6 @@ button {
   font-size: 16px;
 }
 
-button:hover {
+main .nav-item:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
