--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 
 
 nav {
-  min-width: 60vw;
+  max-width: 75vw;
   padding-top: 5%;
   padding-bottom: 5%;
   display: block;
@@ -49,19 +49,19 @@ nav li {
   display: flex;
   float: left;
   vertical-align: middle;
-  padding: 1rem;
-  width: 7rem;
+  padding: 0.5rem;
+  min-width: 10rem;
 }
 
 header {
-  min-width: 30vw;
+  min-width: 15vw;
   padding-left: 5vw;
   align-items: center;
 }
 
 header img {
-  padding-left: 12vw;
-  padding-right: 12vw;
+  padding-left: 4.5vw;
+  padding-right: 4.5vw;
   padding-top: 1vh;
   padding-bottom: 1vh;
   width: 6vw;
@@ -91,10 +91,12 @@ footer {
 
 footer img {
   display: block;
+  width: 80%;
+  height: auto;
   margin: 10%;
 }
 
-h1, h2 {
+h1, h2, h3, h4 {
   font-family: 'Markazi Text'
 }
 
@@ -117,20 +119,78 @@ h1, h2 {
   grid-template-columns: 1fr 1fr;
 }
 
-#Highlights {
-  background-color: #EDEFEE;
-}
-
 #Testimonials {
   background-color: #FBDABB;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+#Testimonials img {
+  border: 1px solid black;
+  width: 10vw;
+  height: auto;
+  margin-top: 10vh;
+  margin-left: 6.25vw;
+  margin-right: 6.25vw;
+  border-radius: 50%;
+}
+
+#Testimonials img:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#Testimonials p {
+  text-align: center;
+  font-style: italic;
+  margin-bottom: 30vh;
+}
+
+#Testimonials h1 {
+  margin-bottom: 10vh;
+  margin-top: 30vh;
+  text-align: center;
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row: 1;
+
+}
+
+#Testimonials div {
+  grid-row: 2;
+}
+
+#Highlights {
+  background-color: #EDEFEE;
+  display: grid;
+  grid-template-rows: 1fr 10fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+#Highlights .card {
+  grid-row: 2;
+}
+
+#Highlights .nav-item {
+  align-self: center;
+  max-width: 32px;
+  max-height: 15px;
+  grid-row: 1;
+  grid-column: 3;
+}
+
+#Highlights h1 {
+  text-align: center;
+  grid-row: 1;
+  grid-column: 2;
 }
 
 #Hero img {
   margin-top: 20%;
   margin-bottom: 20%;
-  height: 60%;
-  width: auto;
-  border-radius: 10%;
+  height: auto;
+  width: 100%;
+  border-radius: 20px;
 }
 
 #About div {
@@ -140,9 +200,9 @@ h1, h2 {
 #About img {
   margin-top: 20%;
   margin-bottom: 20%;
-  height: 60vh;
-  width: auto;
-  border-radius: 10%;
+  height: auto;
+  width: 100%;
+  border-radius: 20px;
 }
 
 #Hero div {
@@ -150,7 +210,7 @@ h1, h2 {
 }
 
 main .nav-item {
-  background-color: #F4CE14; /* Green */
+  background-color: #F4CE14; 
   border: none;
   color: black;
   padding: 15px 32px;
@@ -160,6 +220,42 @@ main .nav-item {
   font-size: 16px;
 }
 
-main .nav-item:hover {
+.nav-item:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
+nav .nav-item {
+  background-color: lightgrey;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  min-width: 6rem;
+}
+
+.card {
+  margin: 5vh;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+}
+
+/* Add rounded corners to the top left and the top right corner of the image */
+.card img {
+  border-radius: 5px 5px 0 0;
+  width: 100%;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+
