--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,8 @@ footer img {
 }
 
 h1, h2, h3, h4 {
-  font-family: 'Markazi Text'
+  font-family: 'Markazi Text';
+  font-size: 2em;
 }
 
 #Hero, #Testimonials, #Highlights, #About {
@@ -217,7 +218,7 @@ main .nav-item {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 1.1em;
 }
 
 .nav-item:hover {
@@ -232,7 +233,7 @@ nav .nav-item {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 1.1em;
   min-width: 6rem;
 }
 
@@ -259,3 +260,63 @@ nav .nav-item {
   padding: 2px 16px;
 }
 
+#booking {
+  text-align: center;
+  margin: 0px;
+  width: 100vw;
+  height: 100vh;
+  background-color: lightgrey;
+}
+
+#booking h4 {
+  padding: 10vh;
+  font-style: regular;
+}
+
+#booking form {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10vh;
+  margin-bottom: 5vh;
+  width: 100vw;
+}
+
+label {
+  font-size: 1em;
+  font-style: 'bold';
+}
+
+select {
+  width: 100%;
+  padding: 16px 20px;
+  border: none;
+  border-radius: 4px;
+  background-color: #f1f1f1;
+}
+
+input {
+  font-size: 1.2em;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+#confirmed {
+  padding-top: 30vh;
+  padding-bottom: 30vh;
+  background-color: #495E57;
+  width: 100vw;
+  height: 80vh;
+}
+
+#confirmed p {
+  font-family: 'Markazi Text';
+  font-size: 3em;
+  display: block;
+  align-self: middle;
+  color: white;
+  font-style: bold;
+  text-align: center;
+}
